k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-api
  template:
    metadata:
      labels:
        app: product-api
    spec:
      containers:
        - name: product-api
          image: product-api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
