k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-api
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: product-api
