k8s/app-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: product-api
spec:
  to:
    kind: Service
    name: product-api
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
